# dragon_noesis

./: .gitignore  .gitmodules  README.md
src/: .clang-format  Array.h  CMakeLists.txt  README.md  dragon.cpp  dragon.h  export.h  export_clang.h  export_win32.h
src/decima/: README.md
src/dragapult/: README.md
src/dragon/: Array.h  dragon.h
src/lumberyard/: Actor.cpp  Actor.h  Actor_Noesis.cpp  Animation.cpp  Animation.h  Animation_Noesis.cpp  CMakeLists.txt  Lumberyard.cpp  Lumberyard.h  LumberyardActor.cpp  LumberyardActor.h  LumberyardAnimation.cpp  LumberyardAnimation.h  LumberyardModel.cpp  LumberyardModel.h  LumberyardModelStructs.h  LumberyardTexture.cpp  LumberyardTexture.h  Material.cpp  Material.h  Model.cpp  Model.h  ModelStructs.h  Model_Noesis.cpp  README.md  Texture.cpp  Texture.h  Texture_Noesis.cpp  export.h  export_clang.h  globals.h
src/lumberyard/chunk/: CMakeLists.txt  SharedStructures.h
src/lumberyard/chunk/emfx/: AbstractEMFXChunk.h  ActorInfo.cpp  ActorInfo.h  ActorMaterial.cpp  ActorMaterial.h  ActorMaterialAttribute.cpp  ActorMaterialAttribute.h  ActorMaterialAttributeSet.cpp  ActorMaterialAttributeSet.h  ActorMaterialAttributeValue.cpp  ActorMaterialAttributeValue.h  ActorMaterialInfo.cpp  ActorMaterialInfo.h  ActorMaterialLayer.cpp  ActorMaterialLayer.h  ActorMesh.cpp  ActorMesh.h  ActorNode.cpp  ActorNode.h  ActorNodeMotionSources.cpp  ActorNodeMotionSources.h  ActorNodes.cpp  ActorNodes.h  ActorSkinningInfo.cpp  ActorSkinningInfo.h  ActorSubmesh.cpp  ActorSubmesh.h  ActorVertexBuffer.cpp  ActorVertexBuffer.h  CMakeLists.txt  EMFXChunks.h  MotionInfo.cpp  MotionInfo.h  MotionSubMotion.cpp  MotionSubMotion.h  MotionSubMotions.cpp  MotionSubMotions.h  SharedStructures.h
src/lumberyard/chunk/model/: AbstractModelChunk.h  CMakeLists.txt  DataStream.h  ExportFlags.cpp  ExportFlags.h  MaterialName.cpp  MaterialName.h  Mesh.h  ModelChunks.h  Node.cpp  Node.h  SharedStructures.h  Submesh.cpp  Submesh.h
src/lumberyard/chunks/: CMakeLists.txt
src/lumberyard/chunks/emfx/: AbstractEMFXChunk.h  CMakeLists.txt  EMFXChunks.h  SharedStructures.h
src/lumberyard/chunks/model/: AbstractModelChunk.cpp  AbstractModelChunk.h  CMakeLists.txt  DataStream.cpp  DataStream.h  ExportFlags.cpp  ExportFlags.h  MaterialList.cpp  MaterialList.h  MaterialName.cpp  MaterialName.h  Mesh.cpp  Mesh.h  Meta.cpp  Meta.h  ModelChunks.h  ModelFlags.cpp  ModelFlags.h  Node.cpp  Node.h  SharedStructures.h  Submesh.cpp  Submesh.h
src/noesis/: README.md
src/tool/: CMakeLists.txt
src/tool/dragon_array_test/: CMakeLists.txt  main.cpp
src/tool/lumberyard/: CMakeLists.txt  main.cpp
src/warofdragon/: CMakeLists.txt  FileTable.cpp  FileTable.h  FileTable_Noesis.cpp  README.md  WarOfDragon.cpp  WarOfDragon.h  export.h  globals.h
