cmake_minimum_required(VERSION 3.16)
project(fmt_dragon)

set(CMAKE_CXX_STANDARD 20)
set(CMAKE_CXX_STANDARD_REQUIRED ON)
set(CMAKE_CXX_EXTENSIONS OFF)

set (CMAKE_LIBRARY_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/bin)
set (CMAKE_RUNTIME_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/bin)

if(MSVC)
    add_definitions(-D_CRT_SECURE_NO_WARNINGS)
    add_definitions(-wd"4068")
    add_definitions(-wd"4996")
    add_definitions(-wd"4251")
    if(CMAKE_CXX_COMPILER_ID MATCHES "Clang")
        add_definitions(-EHs)
    endif()
    if(NOT CMAKE_CXX_COMPILER_ID STREQUAL "MSVC")
        add_definitions(-D_WIN32_CLANG)
    endif()
else(!USE_GNU)
    set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -stdlib=libc++")
    set(CMAKE_EXE_LINKER_FLAGS "${CMAKE_EXE_LINKER_FLAGS} -stdlib=libc++ -lc++abi")
endif()

set(USE_NOESIS OFF CACHE BOOL "Use and Export Noesis functions")

if(USE_NOESIS)
    if(NOT EXISTS "${PROJECT_SOURCE_DIR}/noesis/noesisplugin.cpp")
        message(FATAL_ERROR "USE_NOESIS is specified but noesis/noesisplugin.cpp is missing!")
    endif()
    if(NOT EXISTS "${PROJECT_SOURCE_DIR}/noesis/NoeSRShared.h")
        message(FATAL_ERROR "USE_NOESIS is specified but noesis/NoeSRShared.h is missing!")
    endif()
    if(NOT EXISTS "${PROJECT_SOURCE_DIR}/noesis/pluginbasetypes.h")
        message(FATAL_ERROR "USE_NOESIS is specified but noesis/pluginbasetypes.h is missing!")
    endif()
    if(NOT EXISTS "${PROJECT_SOURCE_DIR}/noesis/pluginclasses.h")
        message(FATAL_ERROR "USE_NOESIS is specified but noesis/pluginclasses.h is missing!")
    endif()
    if(NOT EXISTS "${PROJECT_SOURCE_DIR}/noesis/pluginshare.h")
        message(FATAL_ERROR "USE_NOESIS is specified but noesis/pluginshare.h is missing!")
    endif()
    if(NOT EXISTS "${PROJECT_SOURCE_DIR}/noesis/pluginsupport.cpp")
        message(FATAL_ERROR "USE_NOESIS is specified but noesis/pluginsupport.cpp is missing!")
    endif()
endif()

include(GenerateExportHeader)

include_directories(vendor)

add_subdirectory("lumberyard")
add_subdirectory("tool" EXCLUDE_FROM_ALL)
